# Raspberry_PI

./: .gitignore  chmod.c  copy  copy.c  daemon.c  env  env.c  epoll_chat_client  epoll_chat_client.c  epoll_client.c  epoll_server  epoll_server.c  exit  exit.c  fcopy  fcopy.c  fflush  fflush.c  fifo_client.c  fifo_server.c  file  file.c  file.cpp  fork.c  gpioled.c  handleSignal.c  input.c  joystick  joystick.c  limit.c  list  list.c  loop  loop.c  msg_client.c  msg_server.c  pipe.c  posix_msg_client.c  posix_msg_server.c  posix_sem  (+44 more)
multiP_basedChat/: .server.c.swp  CMakeLists.txt  server.c
multiP_basedChat/clients/: cilent_1  client_1.c  client_2.c  client_3.c  client_4.c
multiP_basedChat/server/: server  server.c
testm/: cli_2.c  server  server.c
